[package]
name = "hostblock"
version = "0.1.1"
authors = ["Curtis Gagliardi <curtis@curtis.io>"]

[dependencies]
rustbox = "0.11.0"
rand = "0.3.21"
unicode-segmentation = "1.6.0"
getopts = "0.2"

[dependencies.clippy]
clippy = "0.0.302"
optional = true

[features]
default = ["commandline_unblock"]

# enables the -u option
# to disable remove from default
commandline_unblock = []

lints = ["clippy"]
